--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,18 @@
-.disable-js {
+    .disable-js {
     display: none;
 }
 
-
-
-.cat-info{
-    display: flex;
-
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+.breed-select {
+    max-width: 300px;
 }
 
-.cat-info__image-thumb{
+.cat-info {
+    display: flex;
+
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.cat-info__image-thumb {
     padding-top: 20px;
 }
 
@@ -18,26 +20,73 @@
     display: block;
 }
 
-.cat-info__info-thumb{
+.cat-info__info-thumb {
     padding: 20px;
 }
 
 
-.cat-info__title{
+.cat-info__title {
     margin: 0;
     padding: 0;
 }
 
-.cat-info__description{
+.cat-info__description {
     font-size: 18px;
     text-indent: 2em;
     text-align: justify;
 }
 
-.cat-info__temperament{
+.cat-info__temperament {
     font-size: 18px;
 }
 
-.cat-info__temperament--bold{
+.cat-info__temperament--bold {
     font-weight: 700;
 }
+
+.loader-circle {
+        width: 106px;
+        height: 56px;
+        display: block;
+        margin: 30px auto;
+        background-image: linear-gradient(#000 50px, transparent 0), linear-gradient(#000 50px, transparent 0), linear-gradient(#000 50px, transparent 0), linear-gradient(#000 50px, transparent 0), radial-gradient(circle 14px, #000 100%, transparent 0);
+        background-size: 48px 15px, 15px 35px, 15px 35px, 25px 15px, 28px 28px;
+        background-position: 25px 5px, 58px 20px, 25px 17px, 2px 37px, 76px 0px;
+        background-repeat: no-repeat;
+        position: relative;
+        transform: rotate(-45deg);
+        box-sizing: border-box;
+    }
+
+    .loader-circle::after,
+    .loader-circle::before {
+        content: '';
+        position: absolute;
+        width: 56px;
+        height: 56px;
+        border: 6px solid #000;
+        border-radius: 50%;
+        left: -45px;
+        top: -10px;
+        background-repeat: no-repeat;
+        background-image: linear-gradient(#000 64px, transparent 0), linear-gradient(#000 66px, transparent 0), radial-gradient(circle 4px, #000 100%, transparent 0);
+        background-size: 40px 1px, 1px 40px, 8px 8px;
+        background-position: center center;
+        box-sizing: border-box;
+        animation: rotation 0.3s linear infinite;
+    }
+
+    .loader-circle::before {
+        left: 25px;
+        top: 60px;
+    }
+
+    @keyframes rotation {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
